[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "car-simulation-by-harshit"
version = "1.0.0"
description = "A Python driving game controlled by keyboard or a webcam steering wheel gesture."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Harshit" },
]
dependencies = [
  "pygame>=2.5.2",
  "opencv-python>=4.9.0",
  "mediapipe>=0.10.14",
]

[project.scripts]
car-simulation = "car_simulation.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
